moved font file
moved to root

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "Inter";
-    src: url("/fonts/Inter-Medium.woff2") format("woff2"),
-           url("/fonts/Inter-Medium.woff") format("woff");
+    src: url("Inter-Medium.woff2") format("woff2"),
+           url("Inter-Medium.woff") format("woff");
    }
    
    body {
